--- a/_modules/copyxnat/xnat/xml_cleaner.html
+++ b/_modules/copyxnat/xnat/xml_cleaner.html
@@ -171,14 +171,12 @@
             <span class="n">register_namespace</span><span class="p">(</span><span class="n">prefix</span><span class="p">,</span> <span class="n">namespace</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">root</span></div>
 
-<div class="viewcode-block" id="XmlCleaner.make_project_names_unique"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.make_project_names_unique">[docs]</a>    <span class="k">def</span> <span class="nf">make_project_names_unique</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xml_root</span><span class="p">,</span> <span class="n">disallowed_names</span><span class="p">,</span>
-                                  <span class="n">disallowed_ids</span><span class="p">):</span>
+<div class="viewcode-block" id="XmlCleaner.make_project_names_unique"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.make_project_names_unique">[docs]</a>    <span class="k">def</span> <span class="nf">make_project_names_unique</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xml_root</span><span class="p">,</span> <span class="n">disallowed_ids</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Update project XML tags and attributes to ensure unique values</span>
 
 <span class="sd">        @param xml_root: ElementTree root of the XML to remap</span>
-<span class="sd">        @param disallowed_names: names already in use by other projects</span>
-<span class="sd">        @param disallowed_ids: secondary IDs already in use by other projects</span>
+<span class="sd">        @param disallowed_ids: names and secondary IDs in use by other projects</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="c1"># Get current values of secondary ID and name</span>
@@ -191,7 +189,7 @@
         <span class="n">new_id</span> <span class="o">=</span> <span class="n">secondary_id</span>
         <span class="n">new_name</span> <span class="o">=</span> <span class="n">name</span>
         <span class="n">index</span> <span class="o">=</span> <span class="mi">0</span>
-        <span class="k">while</span> <span class="n">new_id</span> <span class="ow">in</span> <span class="n">disallowed_ids</span> <span class="ow">or</span> <span class="n">new_name</span> <span class="ow">in</span> <span class="n">disallowed_names</span><span class="p">:</span>
+        <span class="k">while</span> <span class="n">new_id</span> <span class="ow">in</span> <span class="n">disallowed_ids</span> <span class="ow">or</span> <span class="n">new_name</span> <span class="ow">in</span> <span class="n">disallowed_ids</span><span class="p">:</span>
             <span class="n">index</span> <span class="o">+=</span> <span class="mi">1</span>
             <span class="n">new_id</span> <span class="o">=</span> <span class="n">secondary_id</span> <span class="o">+</span> <span class="s1">&#39; copy </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">index</span><span class="p">)</span>
             <span class="n">new_name</span> <span class="o">=</span> <span class="n">name</span> <span class="o">+</span> <span class="s1">&#39; copy </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">index</span><span class="p">)</span>
