--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -629,8 +629,7 @@
         <span class="n">disallowed</span> <span class="o">=</span> <span class="n">destination_parent</span><span class="o">.</span><span class="n">get_disallowed_project_ids</span><span class="p">(</span><span class="n">label</span><span class="o">=</span><span class="n">label</span><span class="p">)</span>
         <span class="n">cleaned_xml_root</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">make_project_names_unique</span><span class="p">(</span>
             <span class="n">xml_root</span><span class="o">=</span><span class="n">xml_root</span><span class="p">,</span>
-            <span class="n">disallowed_ids</span><span class="o">=</span><span class="n">disallowed</span><span class="p">[</span><span class="s2">&quot;secondary_ids&quot;</span><span class="p">],</span>
-            <span class="n">disallowed_names</span><span class="o">=</span><span class="n">disallowed</span><span class="p">[</span><span class="s2">&quot;names&quot;</span><span class="p">]</span>
+            <span class="n">disallowed_ids</span><span class="o">=</span><span class="n">disallowed</span>
         <span class="p">)</span>
 
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">xml_cleaner</span><span class="o">.</span><span class="n">clean</span><span class="p">(</span>
@@ -725,24 +724,23 @@
 
 <div class="viewcode-block" id="XnatServer.get_disallowed_project_ids"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.get_disallowed_project_ids">[docs]</a>    <span class="k">def</span> <span class="nf">get_disallowed_project_ids</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Return arrays of project names and secondary IDs that cannot be used</span>
+<span class="sd">        Return list of project names and secondary IDs that cannot be used</span>
 <span class="sd">        for the destination project because they are already in use by other</span>
-<span class="sd">        projects on this server. If the project already exists then the name</span>
-<span class="sd">        and ID it is currently using are allowed (ie they will not be included</span>
-<span class="sd">        in the disallowed lists).</span>
+<span class="sd">        projects on this server. If the project already exists (whihc imples</span>
+<span class="sd">        the project is being udated) then its IDs are permitted (ie they will</span>
+<span class="sd">        not be included in the disallowed lists).</span>
 
-<span class="sd">        :param label: the label of the project which</span>
-<span class="sd">        :return:</span>
+<span class="sd">        :param label: the label of the current project</span>
+<span class="sd">        :return: list of IDs (names and secondary_IDs) used by other projects</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
-        <span class="n">disallowed_secondary_ids</span> <span class="o">=</span> <span class="p">[]</span>
-        <span class="n">disallowed_names</span> <span class="o">=</span> <span class="p">[]</span>
+        <span class="n">disallowed_ids</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="k">for</span> <span class="n">project</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">project_name_metadata</span><span class="p">():</span>
             <span class="k">if</span> <span class="ow">not</span> <span class="n">project</span><span class="p">[</span><span class="s2">&quot;ID&quot;</span><span class="p">]</span> <span class="o">==</span> <span class="n">label</span><span class="p">:</span>
-                <span class="n">disallowed_names</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">project</span><span class="p">[</span><span class="s2">&quot;name&quot;</span><span class="p">])</span>
-                <span class="n">disallowed_secondary_ids</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">project</span><span class="p">[</span><span class="s2">&quot;secondary_ID&quot;</span><span class="p">])</span>
-        <span class="k">return</span> <span class="p">{</span><span class="s2">&quot;names&quot;</span><span class="p">:</span> <span class="n">disallowed_names</span><span class="p">,</span>
-                <span class="s2">&quot;secondary_ids&quot;</span><span class="p">:</span> <span class="n">disallowed_secondary_ids</span><span class="p">}</span></div>
+                <span class="n">disallowed_ids</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">project</span><span class="p">[</span><span class="s2">&quot;ID&quot;</span><span class="p">])</span>
+                <span class="n">disallowed_ids</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">project</span><span class="p">[</span><span class="s2">&quot;name&quot;</span><span class="p">])</span>
+                <span class="n">disallowed_ids</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">project</span><span class="p">[</span><span class="s2">&quot;secondary_ID&quot;</span><span class="p">])</span>
+        <span class="k">return</span> <span class="n">disallowed_ids</span></div>
 
 <div class="viewcode-block" id="XnatServer.metadata_missing"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.metadata_missing">[docs]</a>    <span class="k">def</span> <span class="nf">metadata_missing</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>  <span class="c1"># pylint: disable=no-self-use</span>
         <span class="k">return</span> <span class="kc">False</span></div>
