deploy: d30bba2fc45d39edd496e1e5fe49b6684913dab1

--- a/genindex.html
+++ b/genindex.html
@@ -73,13 +73,11 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ASSESSOR_ID_MAP">ASSESSOR_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.assessors">assessors() (copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment method)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ATTR_SECONDARY_PROJECT_ID">ATTR_SECONDARY_PROJECT_ID (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ATTRS_TO_REMAP">ATTRS_TO_REMAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ATTRS_TO_DELETE">ATTRS_TO_DELETE (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -382,18 +380,22 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.datatype">datatype() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.datatype">datatype() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.datatype">(copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
 </li>
+      </ul></li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.datatypes">datatypes() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 
       <ul>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.datatypes">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
-      <li><a href="versioneer.html#versioneer.do_setup">do_setup() (in module versioneer)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="versioneer.html#versioneer.do_setup">do_setup() (in module versioneer)</a>
+</li>
       <li><a href="versioneer.html#versioneer.do_vcs_install">do_vcs_install() (in module versioneer)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.download_file">download_file() (copyxnat.xnat_backend.pyxnat_server.PyXnatFile method)</a>
@@ -480,8 +482,12 @@
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_existing">get_existing() (copyxnat.xnat.xnat_interface.XnatItem class method)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.get_id">get_id() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_id">get_id() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.get_id">(copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
 </li>
+      </ul></li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.get_keywords">get_keywords() (in module copyxnat.utils.versioneer_version)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.get_label">get_label() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
@@ -489,8 +495,6 @@
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_or_create_child">get_or_create_child() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
       <li><a href="versioneer.html#versioneer.get_root">get_root() (in module versioneer)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.get_tags_to_remap">get_tags_to_remap() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -819,8 +823,6 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.project">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.PROJECT_ID_MAP">PROJECT_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.project_list">project_list() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 
       <ul>
@@ -896,8 +898,6 @@
       <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand">RebuildCatalogCommand (class in copyxnat.commands.rebuild_catalog_command)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.reconstruction">reconstruction (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.RECONSTRUCTION_ID_MAP">RECONSTRUCTION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.reconstructions">reconstructions() (copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment method)</a>
 </li>
@@ -985,8 +985,6 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.scan">scan (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SCAN_ID_MAP">SCAN_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
-</li>
       <li><a href="versioneer.html#versioneer.scan_setup_py">scan_setup_py() (in module versioneer)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.scans">scans() (copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment method)</a>
@@ -994,8 +992,6 @@
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.server">server (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory">ServerFactory (class in copyxnat.xnat_backend.server_factory)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SESSION_ID_MAP">SESSION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.set_attribute">set_attribute() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 
@@ -1012,8 +1008,6 @@
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.sub_cache">sub_cache() (copyxnat.xnat.copy_cache.CopyCache method)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.subject">subject (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
-</li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SUBJECT_ID_MAP">SUBJECT_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.subjects">subjects() (copyxnat.xnat_backend.pyxnat_server.PyXnatProject method)</a>
 </li>
