--- a/_modules/copyxnat/xnat/xml_cleaner.html
+++ b/_modules/copyxnat/xnat/xml_cleaner.html
@@ -74,61 +74,20 @@
     <span class="n">XNAT_IMAGE_SCAN_DATA_TAG</span> <span class="o">=</span> <span class="s1">&#39;{http://nrg.wustl.edu/xnat}imageScanData&#39;</span>
     <span class="n">XNAT_OTHER_SCAN</span> <span class="o">=</span> <span class="s1">&#39;xnat:OtherDicomScan&#39;</span>
 
-    <span class="c1"># Index names for the maps which store the before-&gt;after values</span>
-    <span class="n">PROJECT_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;PROJECT_ID_MAP&#39;</span>
-    <span class="n">SUBJECT_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;SUBJECT_ID_MAP&#39;</span>
-    <span class="n">SESSION_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;SESSION_ID_MAP&#39;</span>
-    <span class="n">SCAN_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;SCAN_ID_MAP&#39;</span>
-    <span class="n">ASSESSOR_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;ASSESSOR_ID_MAP&#39;</span>
-    <span class="n">RECONSTRUCTION_ID_MAP</span> <span class="o">=</span> <span class="s1">&#39;RECONSTRUCTION_ID_MAP&#39;</span>
-
     <span class="n">TAGS_TO_REMAP</span> <span class="o">=</span> <span class="p">{</span>
-        <span class="s1">&#39;{http://icr.ac.uk/icr}subjectID&#39;</span><span class="p">:</span> <span class="n">SUBJECT_ID_MAP</span><span class="p">,</span>
-        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}subject_ID&#39;</span><span class="p">:</span> <span class="n">SUBJECT_ID_MAP</span><span class="p">,</span>
-        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}image_session_ID&#39;</span><span class="p">:</span> <span class="n">SESSION_ID_MAP</span><span class="p">,</span>
-        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}imageSession_ID&#39;</span><span class="p">:</span> <span class="n">SESSION_ID_MAP</span><span class="p">,</span>
-        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}session_id&#39;</span><span class="p">:</span> <span class="n">SESSION_ID_MAP</span><span class="p">,</span>
-        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}scanID&#39;</span><span class="p">:</span> <span class="n">SCAN_ID_MAP</span><span class="p">,</span>
-        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}imageScan_ID&#39;</span><span class="p">:</span> <span class="n">SCAN_ID_MAP</span>
+        <span class="s1">&#39;{http://icr.ac.uk/icr}subjectID&#39;</span><span class="p">:</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">subject</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}subject_ID&#39;</span><span class="p">:</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">subject</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}image_session_ID&#39;</span><span class="p">:</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">experiment</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}imageSession_ID&#39;</span><span class="p">:</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">experiment</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}session_id&#39;</span><span class="p">:</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">experiment</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}scanID&#39;</span><span class="p">:</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">scan</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}imageScan_ID&#39;</span><span class="p">:</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">scan</span>
     <span class="p">}</span>
 
-    <span class="n">ATTRS_TO_REMAP</span> <span class="o">=</span> <span class="p">{</span>
-        <span class="n">XnatType</span><span class="o">.</span><span class="n">project</span><span class="p">:</span> <span class="p">{</span>
-            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
-        <span class="p">},</span>
-        <span class="n">XnatType</span><span class="o">.</span><span class="n">subject</span><span class="p">:</span> <span class="p">{</span>
-            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">SUBJECT_ID_MAP</span><span class="p">,</span>
-            <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
-        <span class="p">},</span>
-        <span class="n">XnatType</span><span class="o">.</span><span class="n">experiment</span><span class="p">:</span> <span class="p">{</span>
-            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">SESSION_ID_MAP</span><span class="p">,</span>
-            <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
-        <span class="p">},</span>
-        <span class="n">XnatType</span><span class="o">.</span><span class="n">scan</span><span class="p">:</span> <span class="p">{</span>
-            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">SCAN_ID_MAP</span><span class="p">,</span>
-            <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
-        <span class="p">},</span>
-        <span class="n">XnatType</span><span class="o">.</span><span class="n">assessor</span><span class="p">:</span> <span class="p">{</span>
-            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">ASSESSOR_ID_MAP</span><span class="p">,</span>
-            <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
-        <span class="p">},</span>
-        <span class="n">XnatType</span><span class="o">.</span><span class="n">reconstruction</span><span class="p">:</span> <span class="p">{</span>
-            <span class="s1">&#39;ID&#39;</span><span class="p">:</span> <span class="n">RECONSTRUCTION_ID_MAP</span><span class="p">,</span>
-            <span class="s1">&#39;project&#39;</span><span class="p">:</span> <span class="n">PROJECT_ID_MAP</span>
-        <span class="p">},</span>
-        <span class="n">XnatType</span><span class="o">.</span><span class="n">resource</span><span class="p">:</span> <span class="p">{</span>
-        <span class="p">},</span>
-        <span class="n">XnatType</span><span class="o">.</span><span class="n">in_resource</span><span class="p">:</span> <span class="p">{</span>
-        <span class="p">},</span>
-        <span class="n">XnatType</span><span class="o">.</span><span class="n">out_resource</span><span class="p">:</span> <span class="p">{</span>
-        <span class="p">},</span>
-        <span class="n">XnatType</span><span class="o">.</span><span class="n">file</span><span class="p">:</span> <span class="p">{</span>
-        <span class="p">}</span>
+    <span class="n">ATTRS_TO_DELETE</span> <span class="o">=</span> <span class="p">{</span>
+        <span class="s1">&#39;ID&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;project&#39;</span>
     <span class="p">}</span>
-
-<div class="viewcode-block" id="XmlCleaner.get_tags_to_remap"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.get_tags_to_remap">[docs]</a>    <span class="k">def</span> <span class="nf">get_tags_to_remap</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_type</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Return a map of attribute mappings for this xnat item type&quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">ATTRS_TO_REMAP</span><span class="p">[</span><span class="n">xnat_type</span><span class="p">]</span></div>
 
     <span class="n">TAGS_TO_DELETE</span> <span class="o">=</span> <span class="p">{</span>
         <span class="s1">&#39;{http://nrg.wustl.edu/xnat}out&#39;</span><span class="p">,</span>
@@ -161,6 +120,7 @@
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">reporter</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_reporter</span> <span class="o">=</span> <span class="n">reporter</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">tag_values</span> <span class="o">=</span> <span class="p">{}</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">id_maps</span> <span class="o">=</span> <span class="p">{}</span>
 
 <div class="viewcode-block" id="XmlCleaner.xml_from_string"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.xml_from_string">[docs]</a>    <span class="nd">@staticmethod</span>
     <span class="k">def</span> <span class="nf">xml_from_string</span><span class="p">(</span><span class="n">xml_string</span><span class="p">):</span>
@@ -201,19 +161,17 @@
             <span class="n">child</span><span class="o">.</span><span class="n">text</span> <span class="o">=</span> <span class="n">new_name</span>
         <span class="k">return</span> <span class="n">xml_root</span></div>
 
-<div class="viewcode-block" id="XmlCleaner.clean"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.clean">[docs]</a>    <span class="k">def</span> <span class="nf">clean</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xml_root</span><span class="p">,</span> <span class="n">xnat_type</span><span class="p">,</span> <span class="n">fix_scan_types</span><span class="p">):</span>
+<div class="viewcode-block" id="XmlCleaner.clean"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.clean">[docs]</a>    <span class="k">def</span> <span class="nf">clean</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xml_root</span><span class="p">,</span> <span class="n">fix_scan_types</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Remove or XML remap tags that change between XNAT servers</span>
 
 <span class="sd">        @param xml_root: ElementTree root of the XML to remap</span>
-<span class="sd">        @param xnat_type: Enumeration describing the type of XNAT item</span>
 <span class="sd">        @param fix_scan_types: set to True to correct ambiguous scan types</span>
 <span class="sd">        @return:</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">attr_to_tag_map</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_tags_to_remap</span><span class="p">(</span><span class="n">xnat_type</span><span class="p">)</span>
 
         <span class="c1"># Delete all attributes that change on dest server</span>
-        <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">attr_to_tag_map</span><span class="p">:</span>
+        <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">ATTRS_TO_DELETE</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">xml_root</span><span class="o">.</span><span class="n">attrib</span><span class="p">:</span>
                 <span class="k">del</span> <span class="n">xml_root</span><span class="o">.</span><span class="n">attrib</span><span class="p">[</span><span class="n">attr</span><span class="p">]</span>
 
@@ -235,11 +193,9 @@
             <span class="k">for</span> <span class="n">child</span> <span class="ow">in</span> <span class="n">xml_root</span><span class="o">.</span><span class="n">findall</span><span class="p">(</span><span class="n">tag</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">NAMESPACES</span><span class="p">):</span>
                 <span class="n">xml_root</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">child</span><span class="p">)</span>
 
-        <span class="c1"># Remap all tags that change on dest server</span>
-        <span class="c1"># for tag, values in self.tag_values.items():</span>
-        <span class="k">for</span> <span class="n">tag</span><span class="p">,</span> <span class="n">tag_id</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">TAGS_TO_REMAP</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+        <span class="k">for</span> <span class="n">tag</span><span class="p">,</span> <span class="n">xnat_id_type</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">TAGS_TO_REMAP</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
             <span class="k">for</span> <span class="n">child</span> <span class="ow">in</span> <span class="n">xml_root</span><span class="o">.</span><span class="n">findall</span><span class="p">(</span><span class="n">tag</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">NAMESPACES</span><span class="p">):</span>
-                <span class="n">tag_remap_dict</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">tag_values</span><span class="p">[</span><span class="n">tag_id</span><span class="p">]</span>
+                <span class="n">tag_remap_dict</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">id_maps</span><span class="p">[</span><span class="n">xnat_id_type</span><span class="p">]</span>
                 <span class="n">src_value</span> <span class="o">=</span> <span class="n">child</span><span class="o">.</span><span class="n">text</span>
                 <span class="k">if</span> <span class="n">src_value</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">tag_remap_dict</span><span class="p">:</span>
                     <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s1">&#39;Tag </span><span class="si">{}</span><span class="s1">: no new value for </span><span class="si">{}</span><span class="s1"> found&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
@@ -251,22 +207,19 @@
 
         <span class="k">return</span> <span class="n">xml_root</span></div>
 
-<div class="viewcode-block" id="XmlCleaner.add_tag_remaps"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.add_tag_remaps">[docs]</a>    <span class="k">def</span> <span class="nf">add_tag_remaps</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">src_xml_root</span><span class="p">,</span> <span class="n">dst_xml_root</span><span class="p">,</span> <span class="n">xnat_type</span><span class="p">):</span>
+<div class="viewcode-block" id="XmlCleaner.add_tag_remaps"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.add_tag_remaps">[docs]</a>    <span class="k">def</span> <span class="nf">add_tag_remaps</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_type</span><span class="p">,</span> <span class="n">id_src</span><span class="p">,</span> <span class="n">id_dst</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Update the remapping dictionary to add add before and after values</span>
+<span class="sd">        Update the remapping dictionary to add add before and after ID values</span>
 <span class="sd">        for the tags in the map</span>
-<span class="sd">        @param src_xml_root: the original XML</span>
-<span class="sd">        @param dst_xml_root: the XML after XNAT has assigned variables</span>
-<span class="sd">        @param xnat_type: Enumeration describing the type of XNAT item</span>
+<span class="sd">        @param xnat_type: Enumeration describing the type of XNAT item which the</span>
+<span class="sd">        ID describes</span>
+<span class="sd">        @param id_src: ID on the source server</span>
+<span class="sd">        @param id_dst: ID on the destination server</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">attr_to_tag_map</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_tags_to_remap</span><span class="p">(</span><span class="n">xnat_type</span><span class="p">)</span>
-        <span class="k">for</span> <span class="n">attr</span><span class="p">,</span> <span class="n">global_attr_name</span> <span class="ow">in</span> <span class="n">attr_to_tag_map</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-            <span class="k">if</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">src_xml_root</span><span class="o">.</span><span class="n">attrib</span><span class="p">:</span>
-                <span class="n">attr_dict</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">tag_values</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">global_attr_name</span><span class="p">,</span> <span class="p">{})</span>
-                <span class="n">src_value</span> <span class="o">=</span> <span class="n">src_xml_root</span><span class="o">.</span><span class="n">attrib</span><span class="p">[</span><span class="n">attr</span><span class="p">]</span>
-                <span class="n">dst_value</span> <span class="o">=</span> <span class="n">dst_xml_root</span><span class="o">.</span><span class="n">attrib</span><span class="p">[</span><span class="n">attr</span><span class="p">]</span>
-                <span class="n">attr_dict</span><span class="p">[</span><span class="n">src_value</span><span class="p">]</span> <span class="o">=</span> <span class="n">dst_value</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">tag_values</span><span class="p">[</span><span class="n">global_attr_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">attr_dict</span></div></div>
+
+        <span class="n">id_map</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">id_maps</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">xnat_type</span><span class="p">,</span> <span class="p">{})</span>
+        <span class="n">id_map</span><span class="p">[</span><span class="n">id_src</span><span class="p">]</span> <span class="o">=</span> <span class="n">id_dst</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">id_maps</span><span class="p">[</span><span class="n">xnat_type</span><span class="p">]</span> <span class="o">=</span> <span class="n">id_map</span></div></div>
 </pre></div>
 
             <div class="clearer"></div>
