--- a/genindex.html
+++ b/genindex.html
@@ -224,6 +224,8 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui
 
@@ -231,8 +233,6 @@
         <li><a href="copyxnat.ui.html#module-copyxnat.ui">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui.copyxnat_command_line
 
@@ -333,35 +333,31 @@
 </li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.create">(copyxnat.xnat.xnat_interface.XnatParentItem method)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor class method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment class method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatFile class method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatInResource.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatInResource class method)</a>
-</li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatItem class method)</a>
 </li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources class method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources class method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatOutResource.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatOutResource class method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatProject class method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatReconstruction.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatReconstruction class method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResource.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatResource class method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase class method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatScan.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatScan class method)</a>
-</li>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatSubject.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatSubject class method)</a>
-</li>
         <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory.create">(copyxnat.xnat_backend.server_factory.ServerFactory method)</a>
+</li>
+      </ul></li>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor.create_interface">create_interface() (copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor class method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatFile class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatInResource.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatInResource class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatOutResource.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatOutResource class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatProject class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatReconstruction.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatReconstruction class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResource.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatResource class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatScan.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatScan class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatSubject.create_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatSubject class method)</a>
 </li>
       </ul></li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.create_on_server">create_on_server() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
@@ -1217,7 +1213,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Tom Doel.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.0.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
     </div>
   </body>
 </html>
